@@ -3,6 +3,7 @@
 \alias{fetchNASIS}
 \alias{fetchNASIS_component_data}
 \alias{get_component_data_from_NASIS_db}
+\alias{get_copedon_from_NASIS_db}
 \alias{get_component_horizon_data_from_NASIS_db}
 \alias{getHzErrorsNASIS}
 
